--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Kyeootomi"
         tools:targetApi="31">
         <activity
-            android:name=".view.activity.AddCollectionActivity"
+            android:name=".view.activity.DrawerTransformActivity"
             android:exported="false" />
         <activity
             android:name=".view.activity.AddItemActivity"
