--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31" >
         <activity
-            android:name=".view.activity.UpdateItemActivity"
+            android:name=".view.activity.item.UpdateItemActivity"
             android:exported="false" />
         <activity
-            android:name=".view.activity.HitomiViewActivity"
+            android:name=".view.activity.item.read.ReadHitomiActivity"
             android:exported="false"
             android:theme="@style/Theme.Kyeootomi.HitomiViewer" />
 
@@ -31,7 +31,7 @@
             android:enabled="true" />
 
         <activity
-            android:name=".view.activity.AddItemActivity"
+            android:name=".view.activity.item.AddItemActivity"
             android:exported="false" />
         <activity
             android:name=".view.activity.MainActivity"
