--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
 
 dependencies {
 
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
     implementation 'androidx.fragment:fragment-ktx:1.6.2'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
