--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     implementation 'androidx.fragment:fragment-ktx:1.6.2'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
