--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         tools:targetApi="31">
         <activity
             android:name=".view.activity.item.OnlineViewerActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:configChanges="orientation|screenSize"/>
         <activity
             android:name=".view.activity.item.UpdateItemActivity"
             android:exported="false" />
