--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.pragmo.kyeootomi'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.pragmo.kyeootomi"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -37,6 +37,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.hannesa2:AndroidSlidingUpPanel:4.2.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     implementation 'androidx.fragment:fragment-ktx:1.6.2'
