--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
 
     <application
@@ -21,9 +22,16 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".view.activity.item.OnlineViewerActivity"
+            android:name=".view.activity.BaseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.activity.SwipeLockActivity"
             android:exported="false"
-            android:configChanges="orientation|screenSize"/>
+            android:launchMode="singleTop"/>
+        <activity
+            android:name=".view.activity.item.OnlineViewerActivity"
+            android:configChanges="orientation|screenSize"
+            android:exported="false" />
         <activity
             android:name=".view.activity.item.UpdateItemActivity"
             android:exported="false" />
